# preqclr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  preqc-lr-calculate.py  preqc-lr-report.py  preqclr-report.py  preqclr.cpp  setup.py
docs/: Makefile  make.bat
docs/source/: .installation.rst.swp  conf.py  index.rst  installation.rst  introduction.rst  manual.rst  quickstart.rst
docs/source/_static/: theme_overrides.css
include/: khash.h
include/readpaf/: paf.c  paf.h  sdict.h
include/spoa/: alignment.cpp  alignment.hpp  chain.cpp  chain.hpp  edge.cpp  edge.hpp  graph.cpp  graph.hpp  node.cpp  node.hpp  simd_alignment.cpp  simd_alignment.hpp  sisd_alignment.cpp  sisd_alignment.hpp  spoa.cpp  spoa.hpp
include/zlib-1.2.11/: Makefile  adler32.lo  compress.lo  crc32.lo  deflate.lo  example  example64  examplesh  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  minigzip  minigzip64  minigzipsh  trees.lo  uncompr.lo  zutil.lo
preqc-lr/: preqc-lr-calculate.py  preqc-lr-report.py  preqclr.cpp  read_seq.cpp  read_seq.hpp  sequence.hpp
preqc-lr-py/: preqc-lr-calculate.py
preqc-lr/main/: preqclr.cpp  preqclr.hpp
src/: Sequence.cpp  Sequence.hpp  contig.cpp  contig.hpp  main.cpp  overlap.cpp  overlap.hpp  polisher.cpp  polisher.hpp  sequence.cpp  sequence.hpp  window.cpp  window.hpp
src/main/: preqclr.cpp  preqclr.hpp  preqclrcpp_backp
